hphp/hack/test/typecheck/reactive/only_rx_if_args2.php.exp
File "only_rx_if_args2.php", line 4, characters 9-22:
Function or method annotated with <<__AtMostRxAsArgs>> attribute should have at least one parameter with <<__AtMostRxAsFunc>> or <<__OnlyRxIfImpl>> annotations. (NastCheck[3064])
